--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,8 @@
+{% include base_path %}
 
+<div class="page__footer-custom" style="text-align: center; padding: 20px;">
+  <p>Created with love by Atishay Kasliwal | katishay@gmail.com | +1 934 246 1198</p>
+  <a href="path/to/your/resume.pdf" target="_blank">
+    <img src="path/to/pdf/logo.png" alt="PDF Logo" style="height: 30px; vertical-align: middle;">
+  </a>
+</div>
