--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,6 @@
 <div class="page__footer-custom" style="text-align: center; padding: 20px;">
   <p>Created with love by Atishay Kasliwal | katishay@gmail.com | +1 934 246 1198</p>
   <a href="path/to/your/resume.pdf" target="_blank">
-    <img src="path/to/pdf/logo.png" alt="PDF Logo" style="height: 30px; vertical-align: middle;">
+    <img src="C:\Users\akasliwal\Documents\GitHub\atishay-kasliwal.github.io\images\pngg.png" alt="PDF Logo" style="height: 30px; vertical-align: middle;">
   </a>
 </div>
