--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 {% include base_path %}
 
 <div class="page__footer-custom" style="text-align: center; padding: 20px;">
-  <p>Created with love by Atishay Kasliwal | katishay@gmail.com | +1 934 246 1198</p>
-  <a href="path/to/your/resume.pdf" target="_blank" style="text-decoration: none; color: inherit;">
+  <p>Created with love by Atishay Kasliwal | katishay@gmail.com | +1 934 246 1198 |  <a href="path/to/your/resume.pdf" target="_blank" style="text-decoration: none; color: inherit;"></a>
     Resume
-  </a>
+  </a></p>
+ 
 </div>
